<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_recordbook"
        android:icon="@drawable/nav_recordbook"
        android:title="@string/title_recordbook" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/nav_schedule"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_sport"
        android:icon="@drawable/nav_sport"
        android:title="@string/title_sport" />
    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/nav_me"
        android:title="@string/title_me" />
</menu>
