<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_qr"
        android:shortcutId="qr_pass"
        android:shortcutLongLabel="@string/shortcut_qr_long"
        android:shortcutShortLabel="@string/shortcut_qr_short">
        <intent
            android:action="dev.alllexey.itmowidgets.action.OPEN_QR_PASS"
            android:targetClass="dev.alllexey.itmowidgets.app.MainActivity"
            android:targetPackage="dev.alllexey.itmowidgets" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_today"
        android:shortcutId="today"
        android:shortcutLongLabel="@string/shortcut_today_long"
        android:shortcutShortLabel="@string/shortcut_today_short">
        <intent
            android:action="dev.alllexey.itmowidgets.action.OPEN_TODAY"
            android:targetClass="dev.alllexey.itmowidgets.app.MainActivity"
            android:targetPackage="dev.alllexey.itmowidgets" />
    </shortcut>
</shortcuts>
